# python-fastapi

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  sample-openapi-spec.json
.github/workflows/: CI-main.yml
app/: config.py  main.py
app/consumer/: inbound_consumer.py  retry_consumer.py
app/dao/: customer_dao.py  sample_jsonb_orm_dao.py  sample_jsonb_sql_dao.py  sample_orm_dao.py  sample_sql_dao.py
app/db/: database_config.py  database_dependencies.py
app/db_schema_migrations/: yoyo_migration.py
app/http_client/: faq_client.py
app/logging/: logging_config.py
app/middleware/: process_time.py  request_id.py
app/model/: customer.py
app/producer/: inbound_producer.py  inbound_retry_producer.py  outbound_producer.py
app/rabbit_mq/: rabbit_mq_client.py  rabbit_mq_initialisation.py
app/rabbit_mq_setup/: rabbit_mq_initialisation.py
app/routers/: customer.py  dependency.py  external_faq.py  sample.py  sample_form.py  sample_jsonb_orm.py  sample_jsonb_sql.py  sample_orm.py  sample_orm_transaction.py  sample_sql.py  sample_sql_transaction.py
app/service/: service_a.py  service_b.py
app/static/: sample_form.html  sample_form_submit_success.html
tests_integration/: conftest.py  test_main.py
tests_integration/consumer/: test_inbound_consumer.py
tests_integration/dao/: test_customer_dao.py  test_sample_json_sql_dao.py  test_sample_sql_dao.py
tests_integration/producer/: test_inbound_producer.py
tests_integration/routers/: support_router.py  test_customer.py  (+10 more)
tests_unit/: conftest.py  test_main.py  test_util.py
(+21 files in other folders)
